force-app/main/default/objects/Contact/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <formula>Host__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Venue</label>
    <type>Text</type>
</CustomField>