force-app/main/default/objects/Contact/fields/Working_Status__c.field-meta.xml
<CustomField>
    <fullName>Working_Status__c</fullName>
    <label>Working Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Missed Appointment</fullName>
            </value>
            <value>
                <fullName>Missed appointment (next call time)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>