force-app/main/default/objects/Contact/fields/Year_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Year_Of_Birth__c</fullName>
    <label>Year of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>