force-app/main/default/objects/Contact/validationRules/VR_CPR_10_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CPR_10_Digits</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(CPR__c)),
  NOT(REGEX(CPR__c, &quot;^[0-9]{10}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>CPR__c</errorDisplayField>
    <errorMessage>CPR must be 10 digits (no dash)</errorMessage>
</ValidationRule>