force-app/main/default/objects/Contact/listViews/CC_DK_Association_Call_List.listView-meta.xml
<ListView>
    <fullName>CC_DK_Association_Call_List</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Association</value>
    </filters>
    <label>CC - DK: Association Call List</label>
</ListView>