force-app/main/default/objects/Contact/listViews/Company_Host_Contacts.listView-meta.xml
<ListView>
    <fullName>Company_Host_Contacts</fullName>
    <columns>Host__c</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CONTACT.PHONE3</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Host__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Company_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Company Host Contacts</label>
</ListView>