force-app/main/default/objects/Contact/listViews/My_Business_Contacts.listView-meta.xml
<ListView>
    <fullName>My_Business_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT.NAME</columns>
    <columns>CONTACT.ENGAGEMENT_MAP</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>ACTION_CADENCE_STATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.IS_PERSON_ACCOUNT</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ACCOUNT.ACCOUNT_ID</field>
        <operation>notEqual</operation>
    </filters>
    <label>My Business Contacts</label>
</ListView>