force-app/main/default/objects/Contact/listViews/My_Contacts.listView-meta.xml
<ListView>
    <fullName>My_Contacts</fullName>
    <columns>Host__c</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CONTACT.PHONE3</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Host__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>My Host Contacts</label>
</ListView>