force-app/main/default/objects/Contact/listViews/My_Contacts_in_Cadences.listView-meta.xml
<ListView>
    <fullName>My_Contacts_in_Cadences</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT.NAME</columns>
    <columns>CONTACT.ENGAGEMENT_MAP</columns>
    <columns>ACTION_CADENCE</columns>
    <columns>ACTION_CADENCE_STATE</columns>
    <columns>ACTION_CADENCE_ASSIGNEE</columns>
    <columns>SCHEDULED_RESUME_DATE_TIME</columns>
    <columns>ACTIVE_TRACKER_COUNT</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.IS_PERSON_ACCOUNT</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ACCOUNT.ACCOUNT_ID</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ACTION_CADENCE_STATE</field>
        <operation>notEqual</operation>
    </filters>
    <label>My Contacts in Cadences</label>
</ListView>